--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,12 +33,7 @@ import navData from "@data/navData.json";
           {
             navData.map((entry) => (
               <li
-                class:list={[
-                  "cs-li",
-                  { "cs-dropdown": entry.children?.length > 0 },
-                ]}
-                tabindex={entry.children?.length > 0 ? "0" : ""}
-              >
+                class="cs-li">
                 <a
                   href={entry.url}
                   class:list={[
@@ -48,17 +43,6 @@ import navData from "@data/navData.json";
                 >
                   {entry.key}
                 </a>
-                {entry.children?.length > 0 && (
-                  <ul class="cs-drop-ul">
-                    {entry.children.map((child) => (
-                      <li class="cs-drop-li">
-                        <a href={child.url} class="cs-li-link cs-drop-link">
-                          {child.key}
-                        </a>
-                      </li>
-                    ))}
-                  </ul>
-                )}
               </li>
             ))
           }
@@ -90,3 +74,433 @@ import navData from "@data/navData.json";
     </button>
   </div>
 </header>
+
+<style lang="less">
+  /*-- -------------------------- -->
+<---     Mobile Navigation      -->
+<--- -------------------------- -*/
+
+/* Mobile - 1023px */
+@media only screen and (max-width: 63.9375rem) {
+  body {
+    &.cs-open {
+      overflow: hidden;
+    }
+  }
+
+  #cs-navigation {
+    /* remove the font family so the Stitch inherits the fonts from your global stylesheet */
+    font-family: "Roboto", "Arial", sans-serif;
+    width: 100%;
+    /* prevents padding from affecting height and width */
+    box-sizing: border-box;
+    padding: (12/16rem) (16/16rem);
+    background-color: #fff;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    position: fixed;
+    z-index: 10000;
+
+    &:before {
+      /* black blurred overlay */
+      content: "";
+      width: 0%;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.6);
+      opacity: 0;
+      display: block;
+      position: absolute;
+      top: 100%;
+      right: 0;
+      z-index: -11;
+      transition: width 0.5s, opacity 0.3s;
+      -webkit-backdrop-filter: blur(10px);
+      backdrop-filter: blur(10px);
+    }
+
+    &.cs-active {
+      &:before {
+        width: 100%;
+        opacity: 1;
+      }
+
+      .cs-ul-wrapper {
+        opacity: 1;
+        transform: scaleX(1);
+        transition-delay: 0.2s;
+      }
+
+      .cs-li {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+
+    .cs-container {
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+    }
+
+    .cs-logo {
+      width: 40%;
+      max-width: (146/16rem);
+      height: 100%;
+      margin: 0 auto 0 0;
+      /* prevents padding from affecting height and width */
+      box-sizing: border-box;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 10;
+
+      img {
+        width: 100%;
+        height: 100%;
+        /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
+        object-fit: contain;
+        /* places the image to the left edge of the parent */
+        object-position: left;
+      }
+    }
+
+    .cs-toggle {
+      /* 44px - 48px */
+      width: clamp(2.75rem, 6vw, 3rem);
+      height: clamp(2.75rem, 6vw, 3rem);
+      margin: 0 0 0 auto;
+      background-color: transparent;
+      border: none;
+      border-radius: (4/16rem);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .cs-active {
+      .cs-line1 {
+        top: 50%;
+        transform: translate(-50%, -50%) rotate(225deg);
+      }
+
+      .cs-line2 {
+        top: 50%;
+        transform: translate(-50%, -50%) translateY(0) rotate(-225deg);
+        transform-origin: center;
+      }
+
+      .cs-line3 {
+        opacity: 0;
+        bottom: 100%;
+      }
+    }
+
+    .cs-box {
+      /* 24px - 28px */
+      width: clamp(1.5rem, 2vw, 1.75rem);
+      /* 14px - 16px */
+      height: clamp(0.875rem, 1.5vw, 1rem);
+      position: relative;
+    }
+
+    .cs-line {
+      width: 100%;
+      height: 2px;
+      background-color: #1a1a1a;
+      border-radius: 2px;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    .cs-line1 {
+      top: 0;
+      transition: transform 0.5s, top 0.3s, left 0.3s;
+      animation-duration: 0.7s;
+      animation-timing-function: ease;
+      animation-direction: normal;
+      animation-fill-mode: forwards;
+      transform-origin: center;
+    }
+
+    .cs-line2 {
+      top: 50%;
+      transform: translateX(-50%) translateY(-50%);
+      transition: top 0.3s, left 0.3s, transform 0.5s;
+      animation-duration: 0.7s;
+      animation-timing-function: ease;
+      animation-direction: normal;
+      animation-fill-mode: forwards;
+    }
+
+    .cs-line3 {
+      bottom: 0;
+      transition: bottom 0.3s, opacity 0.3s;
+    }
+
+    .cs-ul-wrapper {
+      height: 100vh;
+      background-color: #fff;
+      box-shadow: inset rgba(0, 0, 0, 0.2) 0px 8px 24px;
+      opacity: 0;
+      position: absolute;
+      top: 100%;
+      right: 0;
+      left: auto;
+      z-index: -1;
+      overflow: hidden;
+      transform: scaleX(0);
+      transition: transform 0.4s, opacity 0.3s;
+      transform-origin: top right;
+    }
+
+    .cs-ul {
+      width: auto;
+      min-width: 40%;
+      height: 65vh;
+      margin: 0;
+      /* 28px - 40px */
+      padding: (48/16rem) clamp(1.75rem, 3vw, 2.5rem) (32/16rem) (70/16rem);
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-end;
+      gap: (20/16rem);
+      overflow: scroll;
+    }
+
+    .cs-li {
+      text-align: right;
+      list-style: none;
+      width: 100%;
+      margin-right: 0;
+      opacity: 0;
+      /* transition from these values */
+      transform: translateX(-40/16rem);
+      transition: transform 0.6s, opacity 0.9s;
+
+      &:nth-of-type(1) {
+        transition-delay: 0.05s;
+      }
+      &:nth-of-type(2) {
+        transition-delay: 0.1s;
+      }
+      &:nth-of-type(3) {
+        transition-delay: 0.15s;
+      }
+      &:nth-of-type(4) {
+        transition-delay: 0.2s;
+      }
+      &:nth-of-type(5) {
+        transition-delay: 0.25s;
+      }
+      &:nth-of-type(6) {
+        transition-delay: 0.3s;
+      }
+      &:nth-of-type(7) {
+        transition-delay: 0.35s;
+      }
+      &:nth-of-type(8) {
+        transition-delay: 0.4s;
+      }
+      &:nth-of-type(9) {
+        transition-delay: 0.45s;
+      }
+    }
+
+    .cs-li-link {
+      /* 16px - 24px */
+      font-size: clamp(1rem, 2.5vw, 1.5rem);
+      line-height: 1.2em;
+      text-decoration: none;
+      margin: 0;
+      color: var(--headerColor);
+      display: inline-block;
+      position: relative;
+
+      &:before {
+        /* active state underline */
+        content: "";
+        width: 100%;
+        height: 1px;
+        background: currentColor;
+        opacity: 1;
+        display: none;
+        position: absolute;
+        bottom: (-2/16rem);
+        left: 0;
+      }
+
+      &.cs-active {
+        &:before {
+          display: block;
+        }
+      }
+    }
+
+    .cs-button-solid {
+      display: none;
+    }
+  }
+}
+
+/* Dark Mode */
+@media only screen and (max-width: 63.9375rem) {
+  body.dark-mode {
+    #cs-navigation {
+      background-color: var(--dark);
+
+      .cs-logo {
+        /* makes it white */
+        filter: grayscale(1) brightness(1000%);
+      }
+
+      .cs-line {
+        background-color: #fff;
+      }
+
+      .cs-ul-wrapper {
+        background-color: var(--medium);
+      }
+
+      .cs-li-link {
+        color: var(--bodyTextColorWhite);
+      }
+    }
+  }
+}
+
+
+/*-- -------------------------- -->
+<---     Desktop Navigation     -->
+<--- -------------------------- -*/
+
+/* Small Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+  #cs-navigation {
+    /* remove the font family so the Stitch inherits the fonts from your global stylesheet */
+    font-family: "Roboto", "Arial", sans-serif;
+    width: 100%;
+    /* prevents padding from affecting height and width */
+    box-sizing: border-box;
+    padding: 0 (16/16rem);
+    background-color: #fff;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    position: fixed;
+    z-index: 10000;
+
+    .cs-container {
+      width: 100%;
+      max-width: (1280/16rem);
+      margin: auto;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      gap: (24/16rem);
+    }
+
+    .cs-toggle {
+      display: none;
+    }
+
+    .cs-logo {
+      width: 18.4%;
+      max-width: (350/16rem);
+      height: (65/16rem);
+      /* margin-right auto pushes everything away from it to the right */
+      margin: 0 auto 0 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 100;
+
+      img {
+        width: 100%;
+        height: 100%;
+        /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
+        object-fit: contain;
+      }
+    }
+
+    .cs-ul {
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      /* 20px - 36px */
+      gap: clamp(1.25rem, 2.6vw, 2.25rem);
+    }
+
+    .cs-li {
+      list-style: none;
+      padding: (32/16rem) 0;
+      /* prevent flexbox from squishing it */
+      flex: none;
+    }
+
+    .cs-li-link {
+      /* 14px - 16px */
+      font-size: clamp(0.875rem, 1vw, 1rem);
+      line-height: 1.5em;
+      text-decoration: none;
+      margin: 0;
+      color: var(--bodyTextColor);
+      display: block;
+      position: relative;
+      &:hover {
+        &:before {
+          width: 100%;
+        }
+      }
+
+      &.cs-active {
+        &:before {
+          width: 100%;
+        }
+      }
+
+      &:before {
+        /* active state underline */
+        content: "";
+        width: 0%;
+        height: 2px;
+        background: var(--primary);
+        opacity: 1;
+        display: block;
+        position: absolute;
+        bottom: (0/16rem);
+        left: 0;
+        transition: width 0.3s;
+      }
+    }
+  }
+}
+
+/* Dark Mode */
+@media only screen and (min-width: 64rem) {
+  body.dark-mode {
+    #cs-navigation {
+      background-color: var(--dark);
+
+      .cs-logo {
+        /* makes it turn white */
+        filter: grayscale(1) brightness(1000%);
+      }
+
+      .cs-li-link {
+        color: var(--bodyTextColorWhite);
+      }
+
+      .cs-li-link {
+        &:before {
+          background-color: var(--primaryLight);
+        }
+      }
+    }
+  }
+}
+</style>
