Demo: Using <Landing /> with props

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "src/layouts/BaseLayout.astro";
 import CTA from "@components/CTA.astro";
+import Landing from "@components/Landing.astro";
 ---
 
 <BaseLayout
@@ -12,28 +13,9 @@ import CTA from "@components/CTA.astro";
   <!--                    LANDING                   -->
   <!-- ============================================ -->
 
-  <section id="int-hero">
-    <h1 id="home-h">About Us</h1>
-    <picture>
-      <source
-        media="(max-width: 600px)"
-        srcset="/assets/images/cabinets2-m.jpg"
-      />
-      <source
-        media="(min-width: 601px)"
-        srcset="/assets/images/cabinets2.jpg"
-      />
-      <img
-        aria-hidden="true"
-        decoding="async"
-        src="/assets/images/cabinets2.jpg"
-        alt="kitchen cabinets"
-        loading="eager"
-        width="2500"
-        height="1667"
-      />
-    </picture>
-  </section>
+  <Landing 
+    title="About Us"
+  />
 
   <!-- ============================================ -->
   <!--                 Side By Side                 -->
