--- a/src/pages/reviews.astro
+++ b/src/pages/reviews.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "src/layouts/BaseLayout.astro";
 import CTA from "@components/CTA.astro";
+import Landing from "@components/Landing.astro";
 ---
 
 <BaseLayout
@@ -12,25 +13,9 @@ import CTA from "@components/CTA.astro";
   <!--                    LANDING                   -->
   <!-- ============================================ -->
 
-  <section id="int-hero">
-    <h1 id="home-h">Our Reviews</h1>
-    <picture class="cs-picture">
-      <source
-        media="(max-width: 600px)"
-        srcset="/assets/images/landing-m.webp"
-      />
-      <source media="(min-width: 601px)" srcset="/assets/images/landing.jpg" />
-      <img
-        aria-hidden="true"
-        decoding="async"
-        src="/assets/images/landing.jpg"
-        alt="new home"
-        width="2500"
-        height="1667"
-        loading="eager"
-      />
-    </picture>
-  </section>
+  <Landing 
+    title="Reviews"
+  />
 
   <!-- ============================================ -->
   <!--                  Reviews                     -->
@@ -358,13 +343,15 @@ import CTA from "@components/CTA.astro";
         .review {
           background: var(--medium);
 
-          .name {
-            color: #fff;
-          }
+          .star-group {
+            .name {
+              color: #fff;
+            }
 
-          .desc {
-            color: #fff;
-            opacity: 0.7;
+            .desc {
+              color: #fff;
+              opacity: 0.7;
+            }
           }
         }
       }
