Testing without preloads

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -46,15 +46,16 @@ if (!isImageInPublic) {
             <meta name="theme-color" content="#ffffff">
     
             <!-- Preloads -->
-            <link rel="preload" as="image" href="/assets/svgs/logo-white.svg">
+            <!-- <link rel="preload" as="image" href="/assets/svgs/logo-white.svg">
             <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-regular.woff2" crossorigin>
-            <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-700.woff2" crossorigin>
+            <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-700.woff2" crossorigin> -->
     
             <!-- Preload an image - tag not rendered if preloadImg is blank to stop console errors -->
-            { (preloadImg) !== "" &&
+            <!-- { (preloadImg) !== "" &&
                 <link rel="preload" as="image" href={preloadImg} />
             }
-    
+     -->
+
       
             <!--For home page, use service keywords for the title, including location for SEO.
             Other pages should just include the page name.
