--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import CTA from "@components/CTA.astro";
         <span class="cs-topper">Starter Kit</span>
         <h1 class="cs-title">Beginner Astro v4 Starter Kit</h1>
         <p class="cs-text">
-          This beginner kit includes a pre-configured <a href="https://www.astro.build">Astro</a> environment, which
+          This beginner kit includes a pre-configured Astro environment, which
 allows for repeated components, centralized data and greater room to scale as your clients grow. The kit runs the latest major Astro version, v4.
         </p>
         <a href="/about" class="cs-button-solid">Explore More</a>
