refactored paths to components

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import client from "@data/client.json";
+import client from "../data/client.json";
 ---
 
 <!-- ============================================ --><!--                   Footer                     --><!-- ============================================ -->
