--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -1,6 +1,6 @@
 ---
 import Picture from "astro/components/Picture.astro"
-import landingImage from "@assets/images/cabinets2.jpg" // The asset must be imported from src
+import landingImage from "../assets/images/cabinets2.jpg" // The asset must be imported from src
 const { title } = Astro.props
 ---
 
