--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,7 +1,7 @@
 ---
-import BaseLayout from "src/layouts/BaseLayout.astro";
-import client from "@data/client.json";
-import Landing from "@components/Landing.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
+import client from "../data/client.json";
+import Landing from "../components/Landing.astro";
 
 ---
 
