--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,8 +21,7 @@ const { description, title } = Astro.props;
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content={description} />
     <meta name="keywords" content="" />
-    <link rel="canonical" href={`https://${client.domain}${Astro.url.pathname}`}
-    />
+    <link rel="canonical" href={`https://${client.domain}${Astro.url.pathname}`} />
 
     <!--Social Media Display-->
     <meta property="og:title" content={title} />
@@ -76,41 +75,41 @@ const { description, title } = Astro.props;
     </main>
     <Footer />
   </body>
-  
-  <script is:inline>
-    // helper functions to toggle dark mode
-    function enableDarkMode() {
-      document.body.classList.add("dark-mode");
-      localStorage.setItem("theme", "dark");
-    }
-
-    function disableDarkMode() {
-      document.body.classList.remove("dark-mode");
-      localStorage.setItem("theme", "light");
-    }
-
-    function setTheme() {
-      // default to the light theme
-      let theme = "light";
-
-      // check localStorage for a saved 'theme' variable. if it's there, the user has visited before, so apply the necessary theme choices
-      if (localStorage.getItem("theme")) {
-        theme = localStorage.getItem("theme");
-      }
-      // if it's not there, check to see if the user has applied dark mode preferences themselves in the browser
-      else if (
-        window.matchMedia &&
-        window.matchMedia("(prefers-color-scheme: dark)").matches
-      ) {
-        theme = "dark";
-      }
-
-      // if there is no preference set, the default of light will be used. apply accordingly
-      theme === "dark" ? enableDarkMode() : disableDarkMode();
-    }
-
-    setTheme();
-
-    document.addEventListener("astro:after-swap", setTheme); // For View Transitions purposes - astro:after-swap ensures that the theme is kept after navigating to a new page.
-  </script>
 </html>
+
+<script is:inline>
+  // helper functions to toggle dark mode
+  function enableDarkMode() {
+    document.body.classList.add("dark-mode");
+    localStorage.setItem("theme", "dark");
+  }
+
+  function disableDarkMode() {
+    document.body.classList.remove("dark-mode");
+    localStorage.setItem("theme", "light");
+  }
+
+  function setTheme() {
+    // default to the light theme
+    let theme = "light";
+
+    // check localStorage for a saved 'theme' variable. if it's there, the user has visited before, so apply the necessary theme choices
+    if (localStorage.getItem("theme")) {
+      theme = localStorage.getItem("theme");
+    }
+    // if it's not there, check to see if the user has applied dark mode preferences themselves in the browser
+    else if (
+      window.matchMedia &&
+      window.matchMedia("(prefers-color-scheme: dark)").matches
+    ) {
+      theme = "dark";
+    }
+
+    // if there is no preference set, the default of light will be used. apply accordingly
+    theme === "dark" ? enableDarkMode() : disableDarkMode();
+  }
+
+  setTheme();
+
+  document.addEventListener("astro:after-swap", setTheme); // For View Transitions purposes - astro:after-swap ensures that the theme is kept after navigating to a new page.
+</script>
