Bug: fixed a wrong path

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -37,7 +37,7 @@ import client from "../data/client.json";
             <a href="/projects">Projects</a>
           </li>
           <li>
-            <a href="/testimonials">Reviews</a>
+            <a href="/reviews">Reviews</a>
           </li>
           <li>
             <a href="/contact">Contact</a>
