--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -59,7 +59,7 @@ const { description, title } = Astro.props;
     </title>
 
     <!-- Sitewide Scripts -->
-    <script defer src="/js/nav.js"></script>
+    <script src="../js/nav.js"></script>
   </head>
 
   <body>
