Using the getImage() function to optimize landing images and modifying props as required.

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,11 +2,21 @@
 import BaseLayout from "..//layouts/BaseLayout.astro";
 import CTA from "../components/CTA.astro";
 import Landing from "../components/Landing.astro";
+
+import landingImage from "../assets/images/cabinets2.jpg" // The asset must be imported from src
+
+// using the getImage Astro function to optimize our landing image and pass it as props to the BaseLayout (for preloading) and Landing (for rendering)
+import { getImage } from "astro:assets";
+const optimizedImage = await getImage({
+  src: landingImage,
+  format: "webp"
+});
 ---
 
 <BaseLayout
   title="About"
   description="Meta description for the page"
+  preloadedImage = {optimizedImage}
 >
   <!-- ============================================ -->
   <!--                    LANDING                   -->
@@ -14,6 +24,7 @@ import Landing from "../components/Landing.astro";
 
   <Landing 
     title="About Us"
+    image={optimizedImage}
   />
 
   <!-- ============================================ -->
