--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,18 +3,28 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import client from "../data/client.json";
 import Landing from "../components/Landing.astro";
 
+import landingImage from "../assets/images/cabinets2.jpg" // The asset must be imported from src
+
+// using the getImage Astro function to optimize our landing image and pass it as props to the BaseLayout (for preloading) and Landing (for rendering)
+import { getImage } from "astro:assets";
+const optimizedImage = await getImage({
+  src: landingImage,
+  format: "webp"
+});
 ---
 
 <BaseLayout
-  title="Contact"
+  title="About"
   description="Meta description for the page"
+  preloadedImage = {optimizedImage}
 >
   <!-- ============================================ -->
   <!--                    LANDING                   -->
   <!-- ============================================ -->
 
   <Landing 
-    title="Contact"
+    title="Projects"
+    image={optimizedImage}
   />
 
   <!-- ============================================ -->
