--- a/src/pages/reviews.astro
+++ b/src/pages/reviews.astro
@@ -1,19 +1,30 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
+import BaseLayout from "..//layouts/BaseLayout.astro";
 import CTA from "../components/CTA.astro";
 import Landing from "../components/Landing.astro";
+
+import landingImage from "../assets/images/cabinets2.jpg" // The asset must be imported from src
+
+// using the getImage Astro function to optimize our landing image and pass it as props to the BaseLayout (for preloading) and Landing (for rendering)
+import { getImage } from "astro:assets";
+const optimizedImage = await getImage({
+  src: landingImage,
+  format: "webp"
+});
 ---
 
 <BaseLayout
-  title="Reviews"
+  title="About"
   description="Meta description for the page"
+  preloadedImage = {optimizedImage}
 >
   <!-- ============================================ -->
   <!--                    LANDING                   -->
   <!-- ============================================ -->
 
   <Landing 
-    title="Reviews"
+    title="Projects"
+    image={optimizedImage}
   />
 
   <!-- ============================================ -->
